# ubigeo-data-processor

./: .gitignore  Cargo.toml  README.md
data/: ubigeos.csv
src/: command.rs  data.rs  main.rs  ubigeo.rs
src/command/: mod.rs
src/format/: csv.rs  formatter.rs  json.rs  mod.rs  sql.rs
src/processor/: mod.rs  ubigeo_data_processor.rs
