[package]
name = "ubigeo"
version = "0.1.0"
edition = "2024"
description = "Cli tool to get ubigeo data from Peru"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.2"
strum_macros = "0.27.2"

[features]
default = ["data"]
data = []
